
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/mtrense/ticker/rpc";

message ShutdownParameters {
  uint32 grace_period = 1;
}

message ServerState {
  int64 uptime = 1;
  uint32 connection_count = 2;
}
