
syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/mtrense/ticker/rpc";

import "admin.proto";
import "event_stream.proto";

service Admin {
  rpc GetServerState(google.protobuf.Empty) returns (ServerState);
  rpc Shutdown(ShutdownParameters) returns (google.protobuf.Empty);
}

service EventStream {
  rpc Emit(Event) returns (Ack);
  rpc Subscribe(Subscription) returns (stream Event);
}

